--- a/src/SimplePoll.Identity/SimplePoll.Identity.csproj
+++ b/src/SimplePoll.Identity/SimplePoll.Identity.csproj
@@ -5,7 +5,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SimplePoll.Common.DataAccess\SimplePoll.Common.DataAccess.csproj" />
+      <ProjectReference Include="..\SimplePoll.Common\SimplePoll.Common.csproj" />
     </ItemGroup>
 
 </Project>
