Add Identity Authentication.

--- a/src/SimplePoll.Identity/appsettings.json
+++ b/src/SimplePoll.Identity/appsettings.json
@@ -11,7 +11,7 @@
     "SimplePoll": "Server=localhost; Database=simple-poll; User Id=postgres; Password=postgres;"
   },
   "JwtSettings":{
-    "Issuer": "SimplePoll",
+    "Issuer": "http://localhost:5000",
     "Audience": "SimplePoll",
     "SigningKey": "B899C257-C7A4-44F2-8F79-54EAFCD88FA7",
     "LifetimeSeconds": 7200
