--- a/src/SimplePoll.Identity/SimplePoll.Identity.csproj
+++ b/src/SimplePoll.Identity/SimplePoll.Identity.csproj
@@ -10,6 +10,8 @@
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.2" />
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     </ItemGroup>
