--- a/src/SimplePoll.Editor/appsettings.json
+++ b/src/SimplePoll.Editor/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SimplePoll": "Server=localhost; Database=simple-poll; User Id=postgres; Password=postgres;"
+  },
+  "JwtSettings":{
+    "IdentityUrl": "http://localhost:5000",
+    "Audience": "SimplePoll"
+  }
 }
