Add Editor authentication.

--- a/src/SimplePoll.Identity/appsettings.json
+++ b/src/SimplePoll.Identity/appsettings.json
@@ -10,9 +10,12 @@
   "ConnectionStrings": {
     "SimplePoll": "Server=localhost; Database=simple-poll; User Id=postgres; Password=postgres;"
   },
-  "JwtSettings":{
+  "IdentityJwtSettings": {
     "Issuer": "http://localhost:5000",
-    "Audience": "SimplePoll",
+    "Audiences": [
+      "simplepoll.editor",
+      "simplepoll.answers"
+    ],
     "SigningKey": "B899C257-C7A4-44F2-8F79-54EAFCD88FA7",
     "LifetimeSeconds": 7200
   }
