--- a/src/SimplePoll.Common.Authentication/SimplePoll.Common.Authentication.csproj
+++ b/src/SimplePoll.Common.Authentication/SimplePoll.Common.Authentication.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
+      <ProjectReference Include="..\SimplePoll.Common\SimplePoll.Common.csproj" />
     </ItemGroup>
 
 </Project>
