--- a/src/SimplePoll.Editor/SimplePoll.Editor.csproj
+++ b/src/SimplePoll.Editor/SimplePoll.Editor.csproj
@@ -15,4 +15,9 @@
       <Folder Include="Domain" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SimplePoll.Common.Authentication\SimplePoll.Common.Authentication.csproj" />
+      <ProjectReference Include="..\SimplePoll.Common\SimplePoll.Common.csproj" />
+    </ItemGroup>
+
 </Project>
