--- a/src/SimplePoll.Common/SimplePoll.Common.csproj
+++ b/src/SimplePoll.Common/SimplePoll.Common.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="9.5.3" />
+      <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     </ItemGroup>
 
