--- a/src/SimplePoll.Editor/SimplePoll.Editor.csproj
+++ b/src/SimplePoll.Editor/SimplePoll.Editor.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="6.1.0" />
@@ -12,11 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Domain" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\SimplePoll.Common.Authentication\SimplePoll.Common.Authentication.csproj" />
+      <ProjectReference Include="..\SimplePoll.Common.DataAccess\SimplePoll.Common.DataAccess.csproj" />
       <ProjectReference Include="..\SimplePoll.Common\SimplePoll.Common.csproj" />
     </ItemGroup>
 
