Add Editor migrations project.

--- a/src/SimplePoll.Editor/appsettings.json
+++ b/src/SimplePoll.Editor/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SimplePoll": "Server=localhost; Database=simple-poll; User Id=postgres; Password=postgres;"
+    "SimplePoll": "Server=localhost; Database=simple-poll-editor; User Id=postgres; Password=postgres;"
   },
   "JwtSettings":{
     "Issuer": "http://localhost:5000",
