--- a/src/SimplePoll.Answers/SimplePoll.Answers.WebApi/SimplePoll.Answers.WebApi.csproj
+++ b/src/SimplePoll.Answers/SimplePoll.Answers.WebApi/SimplePoll.Answers.WebApi.csproj
@@ -2,29 +2,25 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>SimplePoll.Answers</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
         <PackageReference Include="FluentValidation" Version="10.3.3" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
-        <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Infrastructure\DbContext\Migrations" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\SimplePoll.Common\SimplePoll.Common.csproj" />
+      <ProjectReference Include="..\SimplePoll.Answers.Application\SimplePoll.Answers.Application.csproj" />
+      <ProjectReference Include="..\SimplePoll.Answers.Domain\SimplePoll.Answers.Domain.csproj" />
+      <ProjectReference Include="..\SimplePoll.Answers.Infrastructure\SimplePoll.Answers.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
