Try rpc communication between services

--- a/src/SimplePoll.ApiGateway/SimplePoll.ApiGateway.WebApi/appsettings.json
+++ b/src/SimplePoll.ApiGateway/SimplePoll.ApiGateway.WebApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqConfiguration":{
+    "HostName": "localhost",
+    "VHost": "SimplePoll"
+  }
 }
