--- a/src/SimplePoll.Editor/SimplePoll.Editor.WebApi/appsettings.json
+++ b/src/SimplePoll.Editor/SimplePoll.Editor.WebApi/appsettings.json
@@ -14,5 +14,9 @@
     "Issuer": "http://localhost:5000",
     "Audience": "simplepoll.editor",
     "SigningKey": "B899C257-C7A4-44F2-8F79-54EAFCD88FA7"
+  },
+  "RabbitMqConfiguration":{
+    "HostName": "localhost",
+    "VHost": "SimplePoll"
   }
 }
