--- a/src/SimplePoll.ApiGateway/SimplePoll.ApiGateway.WebApi/SimplePoll.ApiGateway.WebApi.csproj
+++ b/src/SimplePoll.ApiGateway/SimplePoll.ApiGateway.WebApi/SimplePoll.ApiGateway.WebApi.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="6.1.0" />
     </ItemGroup>
